# c_sandbox

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Cargo.toml  TutorialConfig.h  TutorialConfig.h.in  data_buff.csv  makefile  readme.md  readme_main.md  rerun.sh  strace_out  tutorial.cxx
.staff/: bug.md
Step1_build_with_pvs/: CMakeLists.txt  main.cpp  rerun.sh  strace_out
dpdk/: .docker_run.sh  dpdk_readme.md
include/: Hello.h  finalValueAfterOperations.h
main/: CMakeLists.txt
main/src/: main.c
rust/: module_7_solana.md  rust.md  rust.mk
rust/docs/: example_read_write_traits.md  letter1.md
rust/examples/: fmt.rs
rust/i_7_workshop_by_mentor/: .gitignore  ANCHOR_COMMANDS.md  Anchor.toml  BUILD.md  Makefile  README_i_7_workshop_by_mentor.md  dev-counter-keypair.json  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
rust/test_env/: .gitignore  Cargo.toml
rust/yandex_course/i_0_main_project/: .rustfmt.toml  Cargo.toml  run_cargo_item.sh
rust/yandex_course/i_0_main_project/src/: config.rs  main.rs
rust/yandex_course/i_0_main_project/src/utils/: helpers.rs
rust/yandex_course/i_2_4_udp_monitor/: Cargo.toml  readme.md
rust/yandex_course/i_2_4_udp_monitor/bins/monitor/: main.rs
rust/yandex_course/i_2_4_udp_monitor/src/: lib.rs  metrics.rs  receiver.rs  sender.rs
rust/yandex_course/i_3_task3_actix_backend_practice/: .env  Cargo.toml  readme.md
rust/yandex_course/i_3_task3_actix_backend_practice/src/: main.rs
rust/yandex_course/i_3_task3_actix_backend_practice/src/data/: mod.rs  users_repo.rs
rust/yandex_course/i_3_task3_actix_backend_practice/src/domain/: mod.rs
rust/yandex_course/i_3_task3_actix_backend_practice/src/infrastructure/: config.rs  migrate.rs  mod.rs  security.rs
rust/yandex_course/i_3_task3_actix_backend_practice/src/infrastructure/migrations/: 0001_init.sql
rust/yandex_course/i_3_task3_actix_backend_practice/src/presentation/: routes.rs
rust/yandex_course/i_3_task6_actix_bank_api/: Cargo.toml  README.md
rust/yandex_course/i_3_task6_actix_bank_api/src/: main.rs
rust/yandex_course/i_3_task6_actix_bank_api/src/application/: bank_service.rs
rust/yandex_course/i_3_task6_actix_bank_api/src/data/: account_repository.rs
rust/yandex_course/i_3_task6_actix_bank_api/src/domain/: mod.rs
rust/yandex_course/i_3_task6_actix_bank_api/src/presentation/: dto.rs  handlers.rs  mod.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/: Cargo.toml  README.md
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/: main.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/application/: bank_service.rs  mod.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/data/: account_repository.rs  mod.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/domain/: error.rs  mod.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/infrastructure/: mod.rs
rust/yandex_course/i_3_task6_actix_bank_api_advaced/src/presentation/: dto.rs  handlers.rs  middleware.rs  mod.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/: Cargo.toml  README.md
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/: main.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/application/: auth_service.rs  bank_service.rs  mod.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/data/: account_repository.rs  mod.rs  user_repository.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/domain/: error.rs  mod.rs  user.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/infrastructure/: config.rs  logging.rs  mod.rs  security.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/presentation/: auth.rs  dto.rs  middleware.rs  mod.rs
rust/yandex_course/i_3_task7_actix_bank_api_cors_jwt_pass_sql_csrf/src/presentation/handlers/: mod.rs  protected.rs  public.rs
rust/yandex_course/i_3_task9-bank-api-postgres/: Cargo.toml  README.md  env.example
rust/yandex_course/i_3_task9-bank-api-postgres/migrations/: 20250101000001_create_accounts.sql  20250101000002_create_users.sql
rust/yandex_course/i_3_task9-bank-api-postgres/src/: main.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/application/: auth_service.rs  bank_service.rs  exchange_service.rs  mod.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/data/: account_repository.rs  mod.rs  postgres_account_repository.rs  user_repository.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/domain/: error.rs  mod.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/infrastructure/: config.rs  database.rs  mod.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/presentation/: auth.rs  dto.rs  middleware.rs
rust/yandex_course/i_3_task9-bank-api-postgres/src/presentation/handlers/: protected.rs  public.rs
src/: finalValueAfterOperations.c  main.c
tasks/2011_finalValueAfterOperations/: CMakeLists.txt
tasks/2011_finalValueAfterOperations/include/: finalValueAfterOperations.c
tasks/2_twoSum/: CMakeLists.txt
tasks/2_twoSum/src/: 2_twoSum.c  2_twoSum.h  solution.c  solution.h
unix_c/: notes_c_basic.md  spclt_readme.md
unix_c/block0_hello/: hello.c
unix_c/block1/: Makefile  printdir1.c  printdir2.c  testlocks.c
unix_c/block10/: Makefile  noredirect.c  noredirect2.c  pressq.c  psswdmode.c
unix_c/block11/: Makefile  mmap-write.c
unix_c/block11_mmap/: mmap-read.c
unix_c/block2/: typeserver.c
unix_c/block3/: Makefile  msgcli.c  msgserv.c  msgtypes.h  polymsgcli.c  polymsgtypes.h  semserv.c
unix_c/block3_ipc/: semcli.c  shmemcli.c  shmemtypes.h
unix_c/block3_ipc_smem_sem/: polymsgserv.c  semtypes.h  shmemserv.c
unix_c/block4/: Makefile  fsclient.c  fsserver.c  netclient.c  netserver.c
unix_c/block5/: swdemo.c
unix_c/block5_signals/: Makefile  sigdemo.c  siglog.c
unix_c_drivers/: note.md  note_conspect.md  notes_c_drivers.md
yandex/4.7.1_unique_ptr_tree/: CMakeLists.txt  readme.md  rerun.sh
yandex/4.7.1_unique_ptr_tree/sources/: tree.cpp  tree.h
(+232 files in other folders)
