[package]
name = "room_monitoring"
version = "0.1.0"
edition = "2024"

[features]
default = ["random"]   # Фичи по умолчанию
random =  ["dep:rand"] # Фича random включает опциональную зависимость rand
logging =  ["dep:log"] # Фича random включает опциональную зависимость rand
sqlite = []            # Пример дополнительной фичи

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = { version = "0.8", optional = true }  # Опциональная зависимость

[[bin]]
name = "sensor_simulator"
path = "bins/sensor_simulator/main.rs"

[[bin]]
name = "monitor"
path = "bins/monitor/main.rs"
