[package]
name = "i_3_task6_actix_bank_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
thiserror = "1"
once_cell = "1"
env_logger = "0.11"
